chore: fix import path and successfully build for deploy

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="favicon.ico" />
+    <!-- ✅ 可以先移除 vite.svg 或換你自己的圖 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Animate Agent｜陪伴你的角色夥伴</title>
+    <!-- ✅ 改為你的專案名稱 -->
   </head>
   <body>
     <div id="root"></div>
