change initial rag prompt and end word

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.ico" />
     <!-- ✅ 可以先移除 vite.svg 或換你自己的圖 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animate Agent｜陪伴你的角色夥伴</title>
+    <title>縫補計畫</title>
     <!-- ✅ 改為你的專案名稱 -->
   </head>
   <body>
